# Aerospace_RAG

./: .env.example  .gitignore  DEEP_RESEARCH.md  LATEX_PARSER_IMPLEMENTATION.md  PERFORMANCE_STATUS.md  PHASES_1-7_COMPLETE.md  PHASES_1-7_VALIDATION.md  PHASES_3-6_VALIDATION.md  PHASE_1-7_STATUS.md  PHASE_10_COMPLETE.md  PHASE_11_COMPLETE.md  PHASE_8_COMPLETE.md  PHASE_9_COMPLETE.md  PLANNING.md  PROJECT_AWARE_INDEXING.md  QWEN3_SETUP.md  QWEN3_UPGRADE_SUMMARY.md  README.md  TASKS.md  VALIDATION_REPORT.md  VRAM_12GB_CAPABILITIES.md  docker-compose.yml  performance_report.json  pyproject.toml  test_latex_indexing.py  test_project_aware_indexing.py  test_qwen3_quick.py  test_qwen3_setup.py  validate_phases_1_7.py
.github/workflows/: eval.yml
Documents/Aerospace_Structures_LaTeX/: AeroStructure-ERJohnson.cls  App_4P.tex  Ch01_4P.tex  Ch02_4P.tex  Ch03_4P.tex  Ch04_4P.tex  Ch05_4P.tex  Ch06_4P.tex  Ch07_4P.tex  Ch08_4P.tex  Ch09_4P.tex  Ch10_4P.tex  Ch11_4P.tex  Ch12_4P.tex  Ch13_4P.tex  Ch14_4P.tex  Ch15_4P.tex  Ch16_4P.tex  Ch17_4P.tex  Ch18_4P.tex  FM_4P.tex  by.eps  crosslink.tex  latexmkrc  main.tex  nc.eps
PRPs/: aerospace-latex-rag.md
PRPs/examples/tech-doc-scanner/: EQUATION_IMPROVEMENTS.md  FINAL_SOLUTION.md  LATEX_TROUBLESHOOTING.md  PIX2TEXT_INTEGRATION.md  README.md  SUMMARY.md
PRPs/examples/tech-doc-scanner/docs/: api.md  configuration.md  development.md  installation.md
PRPs/examples/tech-doc-scanner/examples/: README.md  basic_conversion.py  batch_processing.py  compare_pipelines.py  custom_pipeline.py
PRPs/examples/tech-doc-scanner/src/: __init__.py  cache.py  cli.py  config.py  converter.py  pipelines.py  stats.py
PRPs/examples/tech-doc-scanner/src/enrichment/: __init__.py  base.py  pix2text.py
PRPs/examples/tech-doc-scanner/src/latex/: __init__.py  cleaner.py  validator.py
PRPs/examples/tech-doc-scanner/tests/: __init__.py  conftest.py  test_config.py  test_converter.py  test_integration.py  test_latex_cleaner.py  test_latex_cleaner_extended.py  test_latex_validator.py  test_latex_validator_extended.py  test_pipelines.py
PRPs/requests/: INITIAL.md
config/: models.yaml  qdrant.yaml  system.yaml
data/: CORPUS_README.md  corpus_manifest.json
data/evaluation/: golden_set.json
scripts/: generate_synthetic_testset.py  index_documents.py  query.py  validate_golden_set.py
src/chunking/: equation_aware.py  hierarchical_chunker.py  metadata_enricher.py  semantic_chunker.py
src/embeddings/: __init__.py  batch_processor.py  ollama_qwen3_embedder.py  qwen3_embedder.py
src/evaluation/: __init__.py  ragas_evaluator.py
src/llm/: __init__.py  citation_tracker.py  client.py  prompts.py
src/parsers/: __init__.py  docling_parser.py  latex_parser.py  latex_project_detector.py  marker_parser.py  validator.py
src/pipeline/: __init__.py  rag_pipeline.py
src/reranking/: __init__.py  jina_colbert_reranker.py  optimization.py
src/retrieval/: bm25_retriever.py  fusion.py  query_analyzer.py  semantic_retriever.py  two_stage_pipeline.py
src/storage/: ingestion.py  qdrant_client.py  qdrant_setup.py  quantization.py
src/utils/: cache.py  config.py  monitoring.py
tests/: benchmark_performance.py  test_cache.py  test_citation_tracker.py  test_docling_parser.py  test_embeddings.py  test_llm_client.py  test_monitoring.py  test_prompts.py  test_quantization.py  test_rag_pipeline.py  test_reranking.py
tests/integration/: __init__.py  test_full_pipeline.py
